--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SSS dApps Handson</title>
+  <title>SSS dApps</title>
 </head>
 <body>
-  <h1>SSS dApps Handson</h1>
+  <h1>SSS dApps</h1>
 </body>
 </html>
