--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <title>SSS dApps</title>
+  <title>SSS My Wallet</title>
 </head>
 <body>
-  <h1>SSS dApps</h1>
+  <h1>SSS My Wallet</h1>
 </body>
 </html>
