--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <div class="tx-card">
         <h2>Transactions</h2>
-        
+        <div id="wallet-transactions"></div>
       </div>
   </div>
 
